UI Improvements and Adding Documents

--- a/config/settings.default.yml
+++ b/config/settings.default.yml
@@ -161,6 +161,7 @@
 #
 :require_first_names: true
 :require_last_names:  true
+:require_company: true
 
 # Enable/disable name validation on Accounts
 :require_unique_account_names: true
